iRedMail-0.9.7:
    * Supports new distribution release:
        + OpenBSD 6.1. OpenBSD 6.0 is not supported anymore.
        + Ubuntu 17.04. Ubuntu 16.10 is not supported anymore.
        + Debian 9 (code name: stretch). Tested with Debian 9 RC3.

    * Improvements:
        - SOGo:
            + New script 'tools/backup_sogo.sh'. used to backs up SOGo data
              with 'sogo-tool backup' command.

        - Fail2ban:
            + Add one new regular expession to filter Roundcube log.
            + Enable 2 new jails: apache-auth, nginx-http-auth.
            + Split jail.local to multiple modular jail config files under
              /etc/fail2ban/jail.d.

        - Nginx: Use different directories to store different type of config
          files for easier customization.
            - /etc/nginx/conf.d/ - store configurations used inside 'http {}'
            - /etc/nginx/sites-available/ - store config files for web sites.
              All files under this directory are NOT loaded by default.
            - /etc/nginx/sites-enabled/ - store config files for web sites.
              All files under this directory will be loaded by default.
              Usually file under this directory is a symbol link to file under
              /etc/nginx/sites-enabled/. This way we can easily enable or
              disable a site without renaming or moving its config file.
            - /etc/nginx/sites-conf.d/ - store per-site modular config files.
              for example, for web domain 'iredmail.org', we use directory
              '/etc/nginx/sites-conf.d/iredmail.org/' to store all its http
              settings, and '/etc/nginx/sites-conf.d/iredmail.org-ssl/' for
              all https settings. You can use a prefixed digital number or
              letter to define the order loaded by Nginx. For example,
              '00-listen.conf' will be loaded before other files.

              NOTE: of course you're not forced to use this directory, and